--- a/projects/SSD1315/CMakeLists.txt
+++ b/projects/SSD1315/CMakeLists.txt
@@ -4,13 +4,15 @@ project(ssd1315_display)
 
 target_sources(app PRIVATE
     src/main.c
-    src/i2c_scanner.c
     drivers/ssd1315/ssd1315.c
     drivers/ssd1315/ssd1315_reg.c
+
+    ../i2c_scanner/src/i2c_scanner.c
 )
 
 # Füge den neuen include-Pfad hinzu
 target_include_directories(app PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/include
     ${CMAKE_CURRENT_SOURCE_DIR}/include/ssd1315
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/../i2c_scanner/include
 )
