--- a/projects/SSD1315/CMakeLists.txt
+++ b/projects/SSD1315/CMakeLists.txt
@@ -6,6 +6,8 @@ target_sources(app PRIVATE
     src/main.c
     drivers/ssd1315/ssd1315.c
     drivers/ssd1315/ssd1315_reg.c
+    drivers/ssd1315/i2c_helper.c
+
 
     ../i2c_scanner/src/i2c_scanner.c
 )
