--- a/DisplaySensor/prj.conf
+++ b/DisplaySensor/prj.conf
@@ -6,7 +6,6 @@ CONFIG_ADC_NRFX_SAADC=y
 CONFIG_LOG=y
 
 CONFIG_SENSOR=y
-CONFIG_ADC_NRFX_SAADC=y
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 
@@ -26,3 +25,17 @@ CONFIG_I2C=y
 CONFIG_I2C_NRFX=y
 CONFIG_DISPLAY_LOG_LEVEL_ERR=y
 CONFIG_SSD1306=y
+
+# Networking
+CONFIG_NETWORKING=y
+CONFIG_NET_IPV6=y
+CONFIG_NET_IPV4=y
+CONFIG_LWM2M_LOG_LEVEL_DBG=y
+CONFIG_NET_SOCKETS=y
+
+# LTE
+CONFIG_LTE_LINK_CONTROL=y
+
+# LwM2M
+CONFIG_LWM2M=y
+CONFIG_LWM2M_IPSO_SUPPORT=y
